# companion

./: .gitmodules  CHANGELOG.md  README.md  academia.desktop  bun.lockb  package-lock.json  package.json
.github/workflows/: build.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
