[package]
name = "akademia"
version = "0.0.61"
description = "Akademia Companion App"
authors = ["The Akademia Team"]
license = "Apache-2.0"
repository = "https://github.com/Akademiaapp/companion"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.2", features = [ "tray-icon", "tracing", "devtools"] }
tauri-plugin-window-state = "2.0.1"
tauri-plugin-single-instance = "2.0.1"
tauri-plugin-updater = "2.0.2"
tauri-plugin-notification = "2.0.1"
tauri-plugin-devtools = "2.0.0"
serde = "1.0.210"
serde_json = "1.0.128"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
